--- a/photo/templates/photo/index.html
+++ b/photo/templates/photo/index.html
@@ -4,14 +4,37 @@
 
 
 
-<div class="bg-violet-50 shadow-md rounded-lg p-6 mb-6">
-  
-<h1 class="text-center text-violet-300  font-lobster text-3xl" > Welcome to My Todo App!</h1>
+<div class="bg-emerald-200 shadow-md rounded-lg p-6 mb-6">
+<h1 class="text-center text-violet-600  font-lobster text-3xl" >Welcome to My Gallery!</h1>
 
 
 
 
+<div class="grid grid-flow-col grid-rows-3 gap-4 ">
+  <section class="container mx-auto scroll-smooth">
+    <div class="text-center  my-20 bg"> 
+      <div class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 lg:grid-cols-4 gap-4 mt-10 card w-full bg-best  rounded-2xl shadow-lg p-5 text-center ring-1 ring-green-50"> 
+        
+        <img src="https://media.istockphoto.com/id/2165337331/photo/portrait-of-tabby-cat.jpg?s=1024x1024&w=is&k=20&c=2Z-6G-3InjCOGgi82NEHOZ_K21Cqjt0Ej2W5xeGYZBo=" class=" duration-700  hover:shadow-2xl  hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-cover " />
+        <img src="{% static 'images/p (1).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110   rounded-xl shadow-2xl w-full h-100 object-cover" />
+        <img src="{% static 'images/p (2).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-cover" />
+        <img src="{% static 'images/p (3).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110   rounded-xl shadow-2xl w-full h-100 object-cover" />
+        <img src="{% static 'images/p (11).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-cover " />
+        <img src="{% static 'images/p (25).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110   rounded-xl shadow-2xl w-full h-100 object-cover" />
+        <img src="{% static 'images/p (16).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-cover  " />
+        <img src="{% static 'images/p (7).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110   rounded-xl shadow-2xl w-full h-100 object-cover " />
+        <img src="{% static 'images/p (8).jpg' %}" class=" duration-700  hover:shadow-2xl ring-1 ring-amber-50 hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-fill object-center " />
+        <img src="{% static 'images/p (28).jpg' %}" class=" duration-700  hover:shadow-2xl ring-1 ring-amber-50 hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-fill object-center" />
+        <img src="{% static 'images/p (24).jpg' %}" class=" duration-700  hover:shadow-2xl ring-1 ring-amber-50 hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-fill object-center " />
+        <img src="{% static 'images/p (26).jpg' %}" class=" duration-700  hover:shadow-2xl ring-1 ring-amber-50 hover:scale-110   rounded-xl shadow-2xl w-full h-100 object-fill object-center " />
+        
+      </div>
+      
+      
+    </div>
+  </section> 
 
+</div>
 
 
 
@@ -58,7 +81,7 @@
       <div class="text-center  my-20 bg">
         <div class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 lg:grid-cols-4 gap-4 mt-10 card w-full bg-best  rounded-2xl shadow-lg p-5 text-center ring-1 ring-green-50"> 
           
-          <img src="{% static 'images/p (20).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110 rotate-5  rounded-xl shadow-2xl w-full h-100 object-cover " />
+          <img src="{% static 'images/p (20).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110  rounded-xl shadow-2xl w-full h-100 object-cover " />
           <img src="{% static 'images/p (1).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110 -rotate-5  rounded-xl shadow-2xl w-full h-100 object-cover" />
           <img src="{% static 'images/p (2).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110 rotate-5  rounded-xl shadow-2xl w-full h-100 object-cover" />
           <img src="{% static 'images/p (3).jpg' %}" class=" duration-700  hover:shadow-2xl  hover:scale-110 -rotate-5  rounded-xl shadow-2xl w-full h-100 object-cover" />
