--- a/photo/templates/photo/add.html
+++ b/photo/templates/photo/add.html
@@ -2,10 +2,23 @@
 {% load static %}
 {% block content %}
 
-
-<h1>lets add the photo</h1>
-
-
-
-
-{% endblock %}
+<div class="bg-emerald-100 shadow-md rounded-lg p-6 mb-6 container mx-auto ">
+    
+    
+    <a href="{% url 'index' %}" class="inline-flex items-center px-3 py-2 text-sm font-extrabold text-center text-white bg-green-600 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+        Back to Gallery
+        <svg aria-hidden="true" class="ml-2 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M10.293 15.293a1 1 0 01-.083 1.32l-.094.083L4.586 10l5.61-6.586a1 1 0 011.497 1.32L7.414 9H16a1 1 0 01.117 1.993L16 11H7.414l2.879 3.293z" clip-rule="evenodd"></path>
+        </svg>
+    </a>
+    <h1 class="text-2xl font-bold text-gray-800">Add a New Photo</h1>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="py-2 px-4 max-w-md flex justify-center items-center bg-emerald-500 rounded-2xl" type="submit" >Add Photo</button>    
+        
+        
+        
+    </div>
+        
+        {% endblock %}
