--- a/photo/templates/photo/view.html
+++ b/photo/templates/photo/view.html
@@ -4,8 +4,31 @@
 
 
 
+        <a href="{% url 'index' %}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-600 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800 underline-offset-0 ">
+            Back to Gallery
 
-<h1>lets see the photo</h1>
+        </a>
+  <a class=" inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-600 rounded-lg hover:bg-rose-800 focus:ring-4 focus:outline-none focus:ring-rose-300 dark:bg-rose-600 dark:hover:bg-rose-700 dark:focus:ring-rose-800 underline-offset-0   " href="{% url 'deletePhoto' photo.id %}"> <i class="bi bi-trash"></i></a>
+
+<div class=" relative max-w-full max-h-full bg-white group overflow-hidden group">
+
+<a href="{% url 'index' %}"></a>
+        <img class=" border border-gray-200 rounded-lg shadow object-fill dark:bg-gray-800 dark:border-gray-700" src="{{ photo.image.url }}" alt="" />
+  <a class="absolute  text-white top-0 right-0" href="{% url 'deletePhoto' photo.id %}"> ✖</a>
+
+
+    <div class="p-5">
+
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ photo.title }}</h5>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Category: {{ photo.category.name }}</p>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Description: {{ photo.description }}</p>
+
+        
+
+    
+</div>
+</div>
+
 
 
 {% endblock %}
