--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}My Website{% endblock %}</title>
   <link rel="icon" href="{% static 'favicon.ico' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link href="{% static 'dist/style.css' %}" rel="stylesheet">
 </head>
 <body class=" bg-emerald-100 text-gray-800 font-sans">
 
-{% include "nav.html" %}
+{% comment %} {% include "nav.html" %} {% endcomment %}
   <!-- Main Content -->
   <main class="container mx-auto px-4 py-10">
     {% block content %}
